# ai-agents-masterclass

a2a/: pyproject.toml
a2a/langraph_agent/: graph.py  server.py
a2a/remote_adk_agent/: agent.py
a2a/user-facing-agent/user_facing_agent/: agent.py
chatgpt-clone/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chat-gpt-clone-memory.db  chat-gpt-clone-memory.db-shm  chat-gpt-clone-memory.db-wal  dummy-agent.ipynb  gi  main.py  pyproject.toml
content-pipeline-agent/: crewai_flow.html  main.py
customer-support-agent/: customer-support-memory.db  main.py  models.py
deep-research-clone/: deep-research-team.ipynb  email-optimizer-team.ipynb  report.md  tools.py
email-refiner-agent/: api_mode.ipynb  code_mode.ipynb  deploy.py  prompt.py  remote.py  session.db
hello-langgraph/: .gitignore  main.ipynb  main.py  memory.db-shm  memory.db-wal  pyproject.toml
job-hunter-agent/: main.py  models.py  pyproject.toml  tools.py
multi-agent-architectures/: graph.py  main.ipynb  pyproject.toml
my-first-agent/: main.ipynb
news-reader-agent/: main.py  tools.py
tutor-agent/: langgraph.json  main.py  pyproject.toml
tutor-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
tutor-agent/agents/: classification_agent.py  feynman_agent.py  quiz_agent.py  teacher_agent.py
tutor-agent/tools/: quiz_tools.py  shared_tools.py
workflow-architectures/: main.ipynb
workflow-testing/: main.py  pyproject.toml  tests.py
youtube-thumbnail-maker/: graph.py  main.ipynb
(+40 files in other folders)
