[project]
name = "a2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.118.0",
    "google-adk[a2a]==1.15.1",
    "google-genai==1.40.0",
    "langchain[openai]==0.3.27",
    "langgraph==0.6.8",
    "litellm==1.77.7",
    "python-dotenv==1.1.1",
    "uvicorn==0.37.0",
]
